--- a/manifest.json
+++ b/manifest.json
@@ -10,20 +10,19 @@
   ],
   "host_permissions": [
     "https://api.openai.com/*",
-    "https://cdnjs.cloudflare.com/*",
     "https://essenca-admin.vercel.app/*",
     "https://generativelanguage.googleapis.com/*",
     "https://api.a4f.co/*"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "src/scripts/background.js"
   },
-  "options_page": "settings/options.html",
+  "options_page": "src/ui/settings/options.html",
   "action": {
     "default_title": "Essenca",
-    "default_popup": "popup.html",
+    "default_popup": "src/ui/popup.html",
     "default_icon": {
-      "48": "icons/icon48.png"
+      "48": "assets/icons/icon48.png"
     }
   },
   "content_scripts": [
@@ -32,10 +31,10 @@
         "<all_urls>"
       ],
       "css": [
-        "styles.css"
+        "src/styles/styles.css"
       ],
       "js": [
-        "content.js"
+        "src/scripts/content.js"
       ]
     },
     {
@@ -43,24 +42,27 @@
         "*://*.linkedin.com/*"
       ],
       "css": [
-        "linkedin feature/style.css"
+        "src/features/linkedin feature/style.css"
       ],
       "js": [
-        "linkedin feature/content.js"
+        "src/features/linkedin feature/content.js"
       ]
     }
   ],
   "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "assets/icons/icon16.png",
+    "32": "assets/icons/icon32.png",
+    "48": "assets/icons/icon48.png",
+    "128": "assets/icons/icon128.png"
   },
   "web_accessible_resources": [
     {
       "resources": [
-        "styles.css",
-        "Essenca_logo.png"
+        "src/styles/styles.css",
+        "assets/Essenca_logo.png",
+        "assets/Essenca_logo_light.png",
+        "assets/css/*",
+        "assets/webfonts/*"
       ],
       "matches": [
         "<all_urls>"
